[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
sysinfo = {version="0.20.5"}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = {  git = "https://github.com/tauri-apps/tauri", branch = "next", features = ["api-all"] }
open = {version = "2.0"}
path-absolutize = "3.0.11"
trash = "2.0.2"
notify = "4.0.17"
normpath = "0.3.1"
lazy_static = "1.4.0"
font-loader = "0.11.0"
glob = "0.3.0"
tauri-plugin-vibrancy = { git = "https://github.com/amrbashir/tauri-plugin-vibrancy" }

[dev-dependencies]
tokio = {version="1.14", features = ["full"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
