[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { git="https://github.com/tauri-apps/tauri",branch="next", features = [] }

[dependencies]
sysinfo = {version="0.20.5"}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = {  git = "https://github.com/tauri-apps/tauri", branch = "next", features = ["api-all", "updater"] }
tauri-plugin-window-state = { git="https://github.com/tauri-apps/tauri-plugin-window-state" }
open = {version = "2.0"}
path-absolutize = "3.0.11"
trash = "2.0.2"
notify = "4.0.17"
normpath = "0.3.1"
lazy_static = "1.4.0"
font-loader = "0.11.0"
clap = "3.0.0-beta.5"
glob = "0.3.0"
parselnk = "0.1.0"
url = "2.2.2"
reqwest = "0.11.8"
tokio = {version="1.14", features = ["full"] }
bincode = {version="1.3.3"}
v8 = "0.40.0"

[target."cfg(any(target_os = \"windows\", target_os = \"macos\"))".dependencies]
tauri-plugin-vibrancy = { git = "https://github.com/tauri-apps/tauri-plugin-vibrancy", features = ["tauri-impl"] }
tauri-plugin-shadows = { git = "https://github.com/tauri-apps/tauri-plugin-shadows", features = ["tauri-impl"], rev="bf34e300d238ea4519dab3220ff8c76f07701a93" }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
