[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
dirs-next = "2.0.0"
open = {version = "2.0"}
parselnk = "0.1.0"
font-loader = "0.11.0"
sysinfo = {version="0.20.5"}